--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "bugs": "https://github.com/pa11y/pa11y-dashboard/issues",
   "license": "GPL-3.0",
   "engines": {
-    "node": ">=12"
+    "node": ">=12 <=18"
   },
   "dependencies": {
     "body-parser": "~1.19.2",
@@ -40,10 +40,10 @@
   },
   "devDependencies": {
     "bower": "^1.8.13",
-    "cheerio": "^1.0.0-rc.10",
+    "cheerio": "1.0.0-rc.10",
     "eslint": "^7.27.0",
     "less": "^3.11.1",
-    "mocha": "^10.2.0",
+    "mocha": "^8.4.0",
     "node-fetch": "^2.7.0",
     "pa11y-lint-config": "^3.0.0",
     "proclaim": "^3.6.0",
